--- a/package.json
+++ b/package.json
@@ -38,21 +38,21 @@
     "react-dom": "^18",
     "recharts": "^2.8.0",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5",
+    "prisma": "^5.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
-    "postcss": "^8",
-    "prisma": "^5.6.0",
-    "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.6.0",
-    "typescript": "^5"
+    "tsx": "^4.6.0"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
