--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "populate-questions": "tsx scripts/populate-questions.ts",
+    "populate-extended": "tsx scripts/populate-extended-questions.ts",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
